random wallpaper and waybar changes

--- a/.config/wallust/wallust.toml
+++ b/.config/wallust/wallust.toml
@@ -45,4 +45,5 @@ dunstrc = { src = "dunstrc", dst = "~/.config/dunst/colors"}
 kitty = { src='kitty.conf', dst='~/.config/kitty/colors.conf'}
 waybar = { src = "waybar.css", dst = "~/.config/waybar/colors.css" }
 hypr = { src = "hyprland.conf", dst = "~/.config/hypr/colors.conf" }
+hyprlock = {src = 'hyprlock.template', dst = "~/.config/hypr/wallust-hyprlock.conf"}
 wofi = { src = "wofi.css", dst = "~/.config/wofi/colors.css"}
