fix kitty and waybar colors

--- a/.config/hypr/colors.conf
+++ b/.config/hypr/colors.conf
@@ -8,8 +8,8 @@
 general {
     # Here we use `saturate` filter to have more vibrant colors,
     # not matter the scheme, since the border should seek the attention
-    col.active_border = rgb(785B5E)
+    col.active_border = rgb(6A667A)
     # color0 is almost the same as the background color,
     # by putting ee as the alpha, it makes it 100% transparent
-    col.inactive_border = rgba(414246ee)
+    col.inactive_border = rgba(1F1E22ee)
 }
