--- a/.config/kitty/colors.conf
+++ b/.config/kitty/colors.conf
@@ -2,28 +2,28 @@
 # Add to wallust config: kitty = { src='kitty.conf', dst='~/.config/kitty/colors.conf'}
 # And add to kitty config: include colors.conf
 
-cursor #CA9E7E
+cursor #93B0BD
 
-background #131010
-foreground #E8EADB
+background #111215
+foreground #D9E5D2
 
-color1 #915029
-color2 #AB5321
-color3 #D0661C
-color4 #B1C19F
-color5 #F0B34F
-color6 #BDC399 
-color7 #D6D8C4
-color8 #969889
-color9 #E8EADB
-color10 #AB5321
-color11 #D0661C
-color12 #B1C19F
-color13 #F0B34F
-color14 #BDC399
-color15 #D6D8C4
+color1 #4F786A
+color2 #4D7BA8
+color3 #947776
+color4 #6B8D64
+color5 #90AE7C
+color6 #92B47F 
+color7 #C0D1B7
+color8 #869280
+color9 #D9E5D2
+color10 #4D7BA8
+color11 #947776
+color12 #6B8D64
+color13 #90AE7C
+color14 #92B47F
+color15 #C0D1B7
 color16 
 
-mark1_foreground #BDC399
-mark2_foreground #D6D8C4
-mark3_foreground #BDC399
+mark1_foreground #92B47F
+mark2_foreground #C0D1B7
+mark3_foreground #92B47F
