change default browser to firefox update packages

--- a/.config/hypr/configs/keybindings.conf
+++ b/.config/hypr/configs/keybindings.conf
@@ -1,19 +1,16 @@
-$mainMod = SUPER # Sets "Windows" key as main modifier
-
-
-bind = $mainMod SHIFT, W, exec, ~/.config/hypr/scripts/wallpaper.sh
-bind = $mainMod, R, exec, fuzzel --no-icons
-bind = $mainMod, BACKSPACE, killactive,
-bind = $mainMod, DELETE, exec, wlogout
-bind = $mainMod SHIFT, V, togglefloating,
-bind = $mainMod SHIFT, P, pseudo, # dwindle
-bind = $mainMod SHIFT, Z, togglesplit, # dwindle
-bind = $mainMod, M, fullscreen
+$mainMod = SUPER 
 
 bind = $mainMod, RETURN, exec, kitty
-bind = $mainMod, F, exec, kitty yazi
-bind = $mainMod, V, exec, kitty nvim
-bind = $mainMod, B, exec, firefox
+bind = $mainMod, BACKSPACE, killactive,
+bind = $mainMod, ESCAPE, exec, kitty btop
+bind = $mainMod, DELETE, exec, wlogout
+bind = $mainMod, SHIFT_R, fullscreen
+bind = $mainMod, R, exec, fuzzel --no-icons
+bind = $mainMod, B, exec, zen-browser
+bind = $mainMod, F, togglefloating,
+bind = $mainMod, P, pseudo,          
+bind = $mainMod, S, togglesplit,     
+bind = $mainMod, T, exec, ~/.config/hypr/scripts/wallpaper.sh
 
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
@@ -52,8 +49,8 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $mainMod, W, togglespecialworkspace, magic
+bind = $mainMod SHIFT, W, movetoworkspace, special:magic
 
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
@@ -72,7 +69,6 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 bind = , Print, exec, ~/.config/hypr/scripts/screenshot.sh
-
 
 
 
