--- a/.config/kitty/colors.conf
+++ b/.config/kitty/colors.conf
@@ -2,28 +2,28 @@
 # Add to wallust config: kitty = { src='kitty.conf', dst='~/.config/kitty/colors.conf'}
 # And add to kitty config: include colors.conf
 
-cursor #B5BAA5
+cursor #D49AA6
 
-background #110F19
-foreground #D8F9FA
+background #08000B
+foreground #F4DDD7
 
-color1 #328199
-color2 #937A50
-color3 #8784AB
-color4 #6AA6B6
-color5 #8EE4ED
-color6 #8FEFF1 
-color7 #BEEFF0
-color8 #85A7A8
-color9 #D8F9FA
-color10 #937A50
-color11 #8784AB
-color12 #6AA6B6
-color13 #8EE4ED
-color14 #8FEFF1
-color15 #BEEFF0
+color1 #925E77
+color2 #B35674
+color3 #B57183
+color4 #B57083
+color5 #C37C83
+color6 #E09F8D 
+color7 #E7C7BD
+color8 #A28B84
+color9 #F4DDD7
+color10 #B35674
+color11 #B57183
+color12 #B57083
+color13 #C37C83
+color14 #E09F8D
+color15 #E7C7BD
 color16 
 
-mark1_foreground #8FEFF1
-mark2_foreground #BEEFF0
-mark3_foreground #8FEFF1
+mark1_foreground #E09F8D
+mark2_foreground #E7C7BD
+mark3_foreground #E09F8D
