--- a/.config/kitty/colors.conf
+++ b/.config/kitty/colors.conf
@@ -2,28 +2,28 @@
 # Add to wallust config: kitty = { src='kitty.conf', dst='~/.config/kitty/colors.conf'}
 # And add to kitty config: include colors.conf
 
-cursor #D49AA6
+cursor #98C7BE
 
-background #08000B
-foreground #F4DDD7
+background #130F16
+foreground #FFF5AD
 
-color1 #925E77
-color2 #B35674
-color3 #B57183
-color4 #B57083
-color5 #C37C83
-color6 #E09F8D 
-color7 #E7C7BD
-color8 #A28B84
-color9 #F4DDD7
-color10 #B35674
-color11 #B57183
-color12 #B57083
-color13 #C37C83
-color14 #E09F8D
-color15 #E7C7BD
+color1 #C35F18
+color2 #329ACF
+color3 #33A1D3
+color4 #35A9DB
+color5 #FED608
+color6 #FEE213 
+color7 #F6E881
+color8 #ACA25A
+color9 #FFF5AD
+color10 #329ACF
+color11 #33A1D3
+color12 #35A9DB
+color13 #FED608
+color14 #FEE213
+color15 #F6E881
 color16 
 
-mark1_foreground #E09F8D
-mark2_foreground #E7C7BD
-mark3_foreground #E09F8D
+mark1_foreground #FEE213
+mark2_foreground #F6E881
+mark3_foreground #FEE213
