--- a/.config/hypr/configs/keybindings.conf
+++ b/.config/hypr/configs/keybindings.conf
@@ -5,12 +5,13 @@ bind = $mainMod, BACKSPACE, killactive,
 bind = $mainMod, ESCAPE, exec, kitty btop
 bind = $mainMod, DELETE, exec, wlogout
 bind = $mainMod, SHIFT_R, fullscreen
-bind = $mainMod, R, exec, fuzzel --no-icons
+bind = $mainMod, SPACE, exec, fuzzel --no-icons
 bind = $mainMod, B, exec, zen-browser
 bind = $mainMod, F, togglefloating,
 bind = $mainMod, P, pseudo,          
 bind = $mainMod, S, togglesplit,     
 bind = $mainMod, T, exec, ~/.config/hypr/scripts/wallpaper.sh
+bind = $mainMod, HOME, exec, makoctl dismiss -a
 
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
@@ -69,6 +70,3 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 bind = , Print, exec, ~/.config/hypr/scripts/screenshot.sh
-
-
-
