--- a/.config/kitty/colors.conf
+++ b/.config/kitty/colors.conf
@@ -2,28 +2,28 @@
 # Add to wallust config: kitty = { src='kitty.conf', dst='~/.config/kitty/colors.conf'}
 # And add to kitty config: include colors.conf
 
-cursor #98C7BE
+cursor #E8AD9B
 
-background #130F16
-foreground #FFF5AD
+background #080016
+foreground #F6E5C4
 
-color1 #C35F18
-color2 #329ACF
-color3 #33A1D3
-color4 #35A9DB
-color5 #FED608
-color6 #FEE213 
-color7 #F6E881
-color8 #ACA25A
-color9 #FFF5AD
-color10 #329ACF
-color11 #33A1D3
-color12 #35A9DB
-color13 #FED608
-color14 #FEE213
-color15 #F6E881
+color1 #E46666
+color2 #DB7572
+color3 #87A8D0
+color4 #90BBB2
+color5 #C2B37B
+color6 #E5B455 
+color7 #E9D1A2
+color8 #A39271
+color9 #F6E5C4
+color10 #DB7572
+color11 #87A8D0
+color12 #90BBB2
+color13 #C2B37B
+color14 #E5B455
+color15 #E9D1A2
 color16 
 
-mark1_foreground #FEE213
-mark2_foreground #F6E881
-mark3_foreground #FEE213
+mark1_foreground #E5B455
+mark2_foreground #E9D1A2
+mark3_foreground #E5B455
