bind home to excalibur-control

--- a/.config/hypr/configs/windowrules.conf
+++ b/.config/hypr/configs/windowrules.conf
@@ -1,3 +1,7 @@
 layerrule = blur, waybar
 layerrule = blur, logout_dialog
 layerrule = blur, launcher
+
+windowrulev2 = opacity 1.0 override 1.0 override,class:(zen)
+windowrulev2 = noblur,class:(zen)
+windowrulev2 = noshadow,class:(zen)
