--- a/.config/kitty/colors.conf
+++ b/.config/kitty/colors.conf
@@ -2,28 +2,28 @@
 # Add to wallust config: kitty = { src='kitty.conf', dst='~/.config/kitty/colors.conf'}
 # And add to kitty config: include colors.conf
 
-cursor #E8AD9B
+cursor #E4E2E5
 
-background #080016
-foreground #F6E5C4
+background #2B2535
+foreground #F3FCEC
 
-color1 #E46666
-color2 #DB7572
-color3 #87A8D0
-color4 #90BBB2
-color5 #C2B37B
-color6 #E5B455 
-color7 #E9D1A2
-color8 #A39271
-color9 #F6E5C4
-color10 #DB7572
-color11 #87A8D0
-color12 #90BBB2
-color13 #C2B37B
-color14 #E5B455
-color15 #E9D1A2
+color1 #B7A6C4
+color2 #D4C8DF
+color3 #34E2F3
+color4 #E4D3E7
+color5 #E9EAD7
+color6 #DDF7C8 
+color7 #E6F3DB
+color8 #A1AA99
+color9 #F3FCEC
+color10 #D4C8DF
+color11 #34E2F3
+color12 #E4D3E7
+color13 #E9EAD7
+color14 #DDF7C8
+color15 #E6F3DB
 color16 
 
-mark1_foreground #E5B455
-mark2_foreground #E9D1A2
-mark3_foreground #E5B455
+mark1_foreground #DDF7C8
+mark2_foreground #E6F3DB
+mark3_foreground #DDF7C8
