--- a/.config/hypr/colors.conf
+++ b/.config/hypr/colors.conf
@@ -8,8 +8,8 @@
 general {
     # Here we use `saturate` filter to have more vibrant colors,
     # not matter the scheme, since the border should seek the attention
-    col.active_border = rgb(E46666)
+    col.active_border = rgb(B7A6C4)
     # color0 is almost the same as the background color,
     # by putting ee as the alpha, it makes it 100% transparent
-    col.inactive_border = rgba(0B0017ee)
+    col.inactive_border = rgba(514A5Cee)
 }
