--- a/.config/hypr/configs/keybindings.conf
+++ b/.config/hypr/configs/keybindings.conf
@@ -12,6 +12,7 @@ bind = $mainMod, P, pseudo,
 bind = $mainMod, S, togglesplit,     
 bind = $mainMod, T, exec, ~/.config/hypr/scripts/wallpaper.sh
 bind = $mainMod, HOME, exec, makoctl dismiss -a
+bind = $mainMod, HOME, exec, kitty --hold -e sudo ~/.config/hypr/scripts/excalibur-control.py
 
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
