--- a/.config/mako/config
+++ b/.config/mako/config
@@ -1,21 +1,21 @@
 layer=overlay
-background-color=#080016
+background-color=#2B2535
 border-size=2
-border-color=#DB7572
+border-color=#D4C8DF
 border-radius=10
 default-timeout=5000
 ignore-timeout=1
 font=Fira Code 10
-text-color=#F6E5C4
+text-color=#F3FCEC
 outer-margin=0,5,15,0
 anchor=bottom-right
 
 [urgency=high]
-border-color=#90BBB2
+border-color=#E4D3E7
 default-timeout=0
 
 [urgency=low]
-border-color=#E46666
+border-color=#B7A6C4
 
 [category=mpd]
 default-timeout=2000
