disable caps lock remove zen browser windowrule

--- a/.config/hypr/configs/input.conf
+++ b/.config/hypr/configs/input.conf
@@ -2,8 +2,8 @@ input {
     kb_layout = us
     kb_variant =
     kb_model =
-    kb_options =
     kb_rules =
+    kb_options = caps:none
 
     follow_mouse = 1
 
