--- a/.config/wallust/wallust.toml
+++ b/.config/wallust/wallust.toml
@@ -45,4 +45,5 @@ waybar = { src = "waybar", dst = "~/.config/waybar/colors.css" }
 hypr = { src = "hyprland", dst = "~/.config/hypr/colors.conf" }
 mako = { src = "mako", dst = "~/.config/mako/config" }
 wlogout = { src = "wlogout", dst = "~/.config/wlogout/colors.css" }
-fuzzel = { template = "fuzzel", target = "~/.config/fuzzel/colors.ini" }
+fuzzel = { template = "fuzzel", dst = "~/.config/fuzzel/colors.ini" }
+starship = { template = "starship", dst = "~/.config/starship.toml"}
