--- a/.config/kitty/colors.conf
+++ b/.config/kitty/colors.conf
@@ -2,28 +2,28 @@
 # Add to wallust config: kitty = { src='kitty.conf', dst='~/.config/kitty/colors.conf'}
 # And add to kitty config: include colors.conf
 
-cursor #E4E2E5
+cursor #9F97BA
 
-background #2B2535
-foreground #F3FCEC
+background #302E38
+foreground #E7E2F1
 
-color1 #B7A6C4
-color2 #D4C8DF
-color3 #34E2F3
-color4 #E4D3E7
-color5 #E9EAD7
-color6 #DDF7C8 
-color7 #E6F3DB
-color8 #A1AA99
-color9 #F3FCEC
-color10 #D4C8DF
-color11 #34E2F3
-color12 #E4D3E7
-color13 #E9EAD7
-color14 #DDF7C8
-color15 #E6F3DB
+color1 #343163
+color2 #574C84
+color3 #565889
+color4 #836CA4
+color5 #B58CCB
+color6 #BAADD6 
+color7 #D4CEE2
+color8 #94909E
+color9 #E7E2F1
+color10 #574C84
+color11 #565889
+color12 #836CA4
+color13 #B58CCB
+color14 #BAADD6
+color15 #D4CEE2
 color16 
 
-mark1_foreground #DDF7C8
-mark2_foreground #E6F3DB
-mark3_foreground #DDF7C8
+mark1_foreground #BAADD6
+mark2_foreground #D4CEE2
+mark3_foreground #BAADD6
