--- a/.config/hypr/configs/variables.conf
+++ b/.config/hypr/configs/variables.conf
@@ -3,3 +3,10 @@ env = HYPRCURSOR_SIZE,20
 env = BROWSER,zen-browser
 env = EDITOR,nvim
 env = VISUAL,nvim
+
+env = LIBVA_DRIVER_NAME,nvidia
+env = XDG_SESSION_TYPE,wayland
+env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = WLR_NO_HARDWARE_CURSORS,1
+env = WLR_DRM_NO_ATOMIC,1
