--- a/.config/xsettingsd/xsettingsd.conf
+++ b/.config/xsettingsd/xsettingsd.conf
@@ -1,4 +1,4 @@
-Net/ThemeName "adw-gtk3-dark"
+Net/ThemeName "adw-gtk3"
 Net/IconThemeName "Adwaita"
 Gtk/CursorThemeName "default"
 Net/EnableEventSounds 1
