--- a/.config/kitty/colors.conf
+++ b/.config/kitty/colors.conf
@@ -2,28 +2,28 @@
 # Add to wallust config: kitty = { src='kitty.conf', dst='~/.config/kitty/colors.conf'}
 # And add to kitty config: include colors.conf
 
-cursor #898FA2
+cursor #9DC3CF
 
-background #24262B
-foreground #F6EFF4
+background #14111B
+foreground #E0FEF6
 
-color1 #1B2E4F
-color2 #1B2F50
-color3 #1D3051
-color4 #7882BB
-color5 #868ABA
-color6 #E5D2E1 
-color7 #E9E0E7
-color8 #A39DA2
-color9 #F6EFF4
-color10 #1B2F50
-color11 #1D3051
-color12 #7882BB
-color13 #868ABA
-color14 #E5D2E1
-color15 #E9E0E7
+color1 #499167
+color2 #5A88A9
+color3 #6C8DB2
+color4 #6A94B0
+color5 #9DF1CE
+color6 #A6FDE4 
+color7 #CAF6E9
+color8 #8DACA3
+color9 #E0FEF6
+color10 #5A88A9
+color11 #6C8DB2
+color12 #6A94B0
+color13 #9DF1CE
+color14 #A6FDE4
+color15 #CAF6E9
 color16 
 
-mark1_foreground #E5D2E1
-mark2_foreground #E9E0E7
-mark3_foreground #E5D2E1
+mark1_foreground #A6FDE4
+mark2_foreground #CAF6E9
+mark3_foreground #A6FDE4
