--- a/.config/mako/config
+++ b/.config/mako/config
@@ -1,21 +1,21 @@
 layer=overlay
-background-color=#24262B
+background-color=#14111B
 border-size=2
-border-color=#1B2F50
+border-color=#5A88A9
 border-radius=10
 default-timeout=5000
 ignore-timeout=1
 font=Fira Code 10
-text-color=#F6EFF4
+text-color=#E0FEF6
 outer-margin=0,5,15,0
 anchor=bottom-right
 
 [urgency=high]
-border-color=#7882BB
+border-color=#6A94B0
 default-timeout=0
 
 [urgency=low]
-border-color=#1B2E4F
+border-color=#499167
 
 [category=mpd]
 default-timeout=2000
