--- a/.config/wallust/wallust.toml
+++ b/.config/wallust/wallust.toml
@@ -46,4 +46,5 @@ hypr = { src = "hyprland", dst = "~/.config/hypr/colors.conf" }
 mako = { src = "mako", dst = "~/.config/mako/config" }
 wlogout = { src = "wlogout", dst = "~/.config/wlogout/colors.css" }
 fuzzel = { template = "fuzzel", dst = "~/.config/fuzzel/colors.ini" }
+nvim = { src = "nvim", dst = "~/.config/nvim/lua/colors/wallust.lua"}
 starship = { template = "starship", dst = "~/.config/starship.toml"}
