--- a/.config/hypr/configs/variables.conf
+++ b/.config/hypr/configs/variables.conf
@@ -1,6 +1,6 @@
 env = QT_QPA_PLATFORMTHEME,qt6ct
 env = HYPRCURSOR_SIZE,20
-env = BROWSER,zen-browser
+env = BROWSER,firefox
 env = EDITOR,nvim
 env = VISUAL,nvim
 
