--- a/.config/kitty/colors.conf
+++ b/.config/kitty/colors.conf
@@ -2,28 +2,28 @@
 # Add to wallust config: kitty = { src='kitty.conf', dst='~/.config/kitty/colors.conf'}
 # And add to kitty config: include colors.conf
 
-cursor #9DC3CF
+cursor #BC9CAC
 
-background #14111B
-foreground #E0FEF6
+background #00000C
+foreground #F4F0F6
 
-color1 #499167
-color2 #5A88A9
-color3 #6C8DB2
-color4 #6A94B0
-color5 #9DF1CE
-color6 #A6FDE4 
-color7 #CAF6E9
-color8 #8DACA3
-color9 #E0FEF6
-color10 #5A88A9
-color11 #6C8DB2
-color12 #6A94B0
-color13 #9DF1CE
-color14 #A6FDE4
-color15 #CAF6E9
+color1 #374067
+color2 #844862
+color3 #BD7D8E
+color4 #878DBD
+color5 #A8CCDD
+color6 #E0D4E6 
+color7 #E7E1EA
+color8 #A29EA4
+color9 #F4F0F6
+color10 #844862
+color11 #BD7D8E
+color12 #878DBD
+color13 #A8CCDD
+color14 #E0D4E6
+color15 #E7E1EA
 color16 
 
-mark1_foreground #A6FDE4
-mark2_foreground #CAF6E9
-mark3_foreground #A6FDE4
+mark1_foreground #E0D4E6
+mark2_foreground #E7E1EA
+mark3_foreground #E0D4E6
