--- a/.config/hypr/configs/autostart.conf
+++ b/.config/hypr/configs/autostart.conf
@@ -1,3 +1,4 @@
 exec-once = swww-daemon & waybar
+exec-once = systemctl --user start hyprpolkitagent
 exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
 exec = gsettings set org.gnome.desktop.interface gtk-theme "adw-gtk3"
