--- a/.config/hypr/configs/keybindings.conf
+++ b/.config/hypr/configs/keybindings.conf
@@ -6,7 +6,7 @@ bind = $mainMod, ESCAPE, exec, kitty btop
 bind = $mainMod, DELETE, exec, wlogout
 bind = $mainMod, SHIFT_R, fullscreen
 bind = $mainMod, SPACE, exec, fuzzel --no-icons
-bind = $mainMod, B, exec, zen-browser
+bind = $mainMod, B, exec, firefox
 bind = $mainMod, F, togglefloating,
 bind = $mainMod, P, pseudo,          
 bind = $mainMod, S, togglesplit,     
